--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/othmane-ela/hotelCanada/public",
+  "homepage": "https://github.com/othmane-ela/hotelCanada",
   "name": "hotel_canada",
   "version": "0.1.0",
   "private": true,
@@ -22,7 +22,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "eject" : "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
