staging correct photos format

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://othmane-ela.github.io/hotelcanadainn",
+  "homepage": "https://othmane-ela.github.io/hotelCanada",
   "name": "hotel_canada",
   "version": "0.1.0",
   "private": true,
